--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.13.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   }
