--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
   },
   "homepage": "https://github.com/Johnson-olaolu/Project-Tracka#readme",
   "dependencies": {
-    "express": "^4.17.3"
+    "bcrypt": "^5.0.1",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-async-handler": "^1.2.0",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.10"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
